--- a/bin/install
+++ b/bin/install
@@ -25,8 +25,9 @@ for dir in */; do
     cd ..
   fi
 done
+cd ../..
 # Install frontend dependencies
 echo "Installing frontend dependencies..."
-cd ../chatui
+cd ./chatui
 npm install
 
