--- a/bin/install
+++ b/bin/install
@@ -8,6 +8,8 @@ cd "$(dirname "$0")/.."
 echo "Installing backend dependencies..."
 cd ai
 npm install 
+# Create fsroot directory if it doesn't exist
+mkdir -p ./fsroot/
 # Install custom MCP server dependencies
 echo "Installing custom MCP server dependencies..."
 cd custommcp
